<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference
        android:key="settings_qa_feature_flags"
        android:summary="@string/settings_qa_feature_flags_summary"
        android:title="@string/settings_qa_feature_flags_title"
        app:allowDividerAbove="true" />

    <PreferenceCategory
        android:key="settings_qa_logs"
        android:title="@string/settings_qa_logs"
        app:allowDividerAbove="false"
        app:allowDividerBelow="true">
        <androidx.preference.Preference
            android:key="settings_qa_export_logs"
            android:title="@string/settings_qa_export_logs" />
        <androidx.preference.Preference
            android:key="settings_qa_save_logs"
            android:title="@string/settings_qa_save_logs" />
    </PreferenceCategory>

    <androidx.preference.Preference
        android:key="settings_qa_check_update"
        android:title="@string/settings_qa_compose_check_for_updates"
        app:allowDividerAbove="true" />

</PreferenceScreen>